Fix gap style in personal experience and roof intelligence page

--- a/components/pages/slides/styles.module.scss
+++ b/components/pages/slides/styles.module.scss
@@ -462,6 +462,7 @@
 .roof {
   color: #fff;
   background: rgb(221, 221, 221);
+  height: 900px;
 
   model-viewer {
     width: 400px;
@@ -719,7 +720,6 @@
     background: #f3f3f3;
     box-shadow: 0px 4px 40px rgba(0, 0, 0, 0.25);
     display: flex;
-    justify-content: space-between;
     align-items: center;
     padding: 20px 30px;
     margin-bottom: 50px;
@@ -727,7 +727,7 @@
 
     &-icon {
       width: 80px;
-      margin-right: 50px;
+      margin-right: 30px;
     }
 
     &-text {
